<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg1"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/请输入用户名"
        android:padding="5dp"
        android:textColorHint="#000"
        android:textSize="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:hint="@string/输入密码仅为数字"
        android:textColorHint="#000"
        android:id="@+id/pwd1"
        android:textSize="20dp"
        android:inputType="numberPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:id="@+id/pwd2"
        android:textSize="20dp"
        android:hint="@string/请重新输入密码"
        android:textColorHint="#000"
        android:inputType="numberPassword"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/性别"
            android:textSize="20dp"
            android:textColor="#000"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sex"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/男"
                android:textSize="20dp"
                android:id="@+id/sexBoy"
                android:textColor="#000"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/女"
                android:textSize="20dp"
                android:id="@+id/sexGirl"
                android:textColor="#000"/>
        </RadioGroup>>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/请输入生日"
        android:textColor="#000"
        android:textSize="20dp"/>
    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/输入学校"
            android:textColor="#000"
            android:textSize="20dp"/>
        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/school"
            android:ems="15"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/选择所在城市"
            android:textSize="20dp"
            android:textColor="#000"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/city"/>
    </LinearLayout>
    <CheckBox
        android:id="@+id/checkBoxAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree"
        android:textSize="16sp"
        android:checked="false"
        android:layout_marginTop="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="55dp"
            android:id="@+id/btn_register"
            android:drawableLeft="@android:drawable/ic_input_add"
            android:text="@string/注册"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="55dp"
            android:id="@+id/btn_clear"
            android:drawableLeft="@android:drawable/ic_input_delete"
            android:text="@string/清除"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/btn_login"
            android:drawableLeft="@android:drawable/ic_input_get"
            android:text="登录"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web|email|phone"
        android:textSize="15dp"
        android:padding="5dp"
        android:text="@string/end"
        android:textColor="#000"/>
</LinearLayout>